--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
     "less": "^4.1.3",
     "sass": "^1.57.1",
