byte-select with native HTML babels

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vite-plugin-md": "^0.21.5",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
