--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "vue": "^3.2.45"
   },
   "devDependencies": {
