document station's framework init

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "src/**/*.md"
   ],
   "references": [
     {
