--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "highlight.js": "^11.7.0",
     "vite-plugin-md": "^0.21.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
