--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@popperjs/core": "^2.11.6",
     "@vitepress-demo-preview/component": "^2.1.0",
-    "@vitepress-demo-preview/plugin": "^1.1.6",
+    "@vitepress-demo-preview/plugin": "1.1.4",
     "byte-ui-test": "^0.0.6",
     "highlight.js": "^11.7.0",
     "vite-plugin-md": "^0.21.5",
