--- a/package.json
+++ b/package.json
@@ -24,14 +24,9 @@
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
-    "@popperjs/core": "^2.11.6",
-    "@vitepress-demo-preview/component": "^2.1.0",
-    "@vitepress-demo-preview/plugin": "1.1.4",
     "byte-ui-test": "^0.0.6",
     "highlight.js": "^11.7.0",
-    "vite-plugin-md": "^0.21.5",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
