--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     },
     "./*": "./*"
   },
+  "workspaces": [
+    "docs",
+    "src/components",
+    "src/byte-ui",
+    "src/utils"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -23,8 +29,11 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "@byte-ui/components": "workspace:*",
+    "@byte-ui/docs": "workspace:*",
+    "@byte-ui/utils": "workspace: *",
     "@highlightjs/vue-plugin": "^2.1.0",
-    "byte-ui-test": "^0.0.6",
+    "byte-ui": "workspace:*",
     "highlight.js": "^11.7.0",
     "vue": "^3.2.45"
   },
@@ -36,6 +45,7 @@
     "sass": "^1.57.1",
     "stylus": "^0.59.0",
     "typescript": "^4.9.3",
+    "unplugin-vue-define-options": "^1.1.4",
     "vite": "^4.0.0",
     "vitepress": "^1.0.0-alpha.38",
     "vue-tsc": "^1.0.11"
