fix input, input-number, add some dep

--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@vueuse/core": "^9.11.1",
-    "@element-plus/icons-vue": "^2.0.10",
-    "axios": "^1.2.3",
-    "lodash-unified": "^1.0.3",
     "@byte-ui/components": "workspace:*",
+    "@byte-ui/constants": "workspace: *",
     "@byte-ui/docs": "workspace:*",
     "@byte-ui/hooks": "workspace: *",
     "@byte-ui/utils": "workspace: *",
-    "@byte-ui/constants": "workspace: *",
+    "@element-plus/icons-vue": "^2.0.10",
     "@highlightjs/vue-plugin": "^2.1.0",
     "@popperjs/core": "^2.11.6",
+    "@vueuse/core": "^9.11.1",
+    "axios": "^1.2.3",
     "byte-ui": "workspace:*",
+    "dayjs": "^1.11.7",
     "highlight.js": "^11.7.0",
+    "lodash-unified": "^1.0.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
