--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@byte-ui/constants": "workspace: *",
     "@byte-ui/docs": "workspace:*",
     "@byte-ui/hooks": "workspace: *",
-    "@byte-ui/utils": "workspace: *",
     "@byte-ui/locale": "workspace: *",
+    "@byte-ui/utils": "workspace: *",
     "@element-plus/icons-vue": "^2.0.10",
     "@highlightjs/vue-plugin": "^2.1.0",
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7",
+    "@sxzz/popperjs-es": "^2.11.7",
     "@vueuse/core": "^9.11.1",
     "axios": "^1.2.3",
     "byte-ui": "workspace:*",
@@ -61,7 +62,7 @@
     "typescript": "^4.9.3",
     "unplugin-vue-define-options": "^1.1.4",
     "vite": "^4.0.0",
-    "vitepress": "^1.0.0-alpha.38",
+    "vitepress": "^1.0.0-alpha.47",
     "vue-tsc": "^1.0.11"
   }
 }
